[package]
edition = "2018"
name = "relidrat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
log = "0.4.14"
"standing-relations" = {git = "https://github.com/davidspies/standing-relations", branch = "main"}
